imports/client/tournaments/team.scss
@import "{}/client/lib/custom.bootstrap.import.scss";

.editor-container {
    border: solid 1px #dddddd;
    background: white;
    padding: 3px 6px;
    border-radius: 2px;
}

.preview-content {
    position: relative;
    overflow: hidden;
    max-height: 8em;
    text-overflow: ellipsis;
}

.preview-content.active {
    overflow: hidden;
    max-height: none;
}

.woman-indicator {
    position: absolute;
    left: 0px;
    top: 0px;
    width: 10px;
    height: 100%;
    background-color: rgb(255, 200, 200);
}

.team-buttons {
    float: right;
    padding-right: 5px;
}

.team-name-status {
    margin-bottom:15px;
}

.team-report .card-body {
    
}

.team-report { 
    .image {
        height: 120px;
        margin-bottom:15px;
        border: none;
        background-position: center center;
        background-repeat: no-repeat;
        background-size: contain;
    }
    .player {
        padding: 3px 10px;
        background-color: lightgray;
    }
    input.opt-editable-field {
        width: 4em;
        padding: 1px 10px;
        border-bottom: 1px solid black;
    }

    textarea.opt-editable-field {
        width: 100%;
        padding: 1px 10px;
        border-bottom: 1px solid black;
    }
}

.team-participants {
    .list-group-item {
        padding:5px 10px;
        .comment {
            font-size:0.8em;
        }
        .participant-state {
            width:56px;
            text-align:left;
            button.btn {
                text-align:left;
            }
        }
        .player-addon {
            
        }
        @include media-breakpoint-up(sm) {
            padding:1px 15px;
            .participant-state {
                width:140px;
            }
            .comment {
                display:inline;
                font-size:1.0em;
            }
        }
    }
}

.team-historic-view {
    .line {
        position: relative;
        left: 0px;
        right: 0px;
        height: 30px;
        .blocks {
            position: absolute;
            left: 120px;
            right: 0px;
            top: 3px;
            .marks {
                position: absolute;
                top: 0px;
                height: 25px;
                float: left;
            }
            .mark-left {
                border-left: 1px solid black;
                padding: 3px;
            }
            .mark-right {
                border-right: 1px solid black;
                padding: 3px;
                text-align: right;
            }
        }
    }
}

